<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotomedium"
            android:text="@string/reader_font_size"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sizeSlider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/size_slider_description"
            android:stepSize="2"
            android:value="14.0"
            android:valueFrom="10.0"
            android:valueTo="26.0"
            app:labelBehavior="floating" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/robotobold"
            android:text="@string/done"
            android:textColor="@color/black" />
    </LinearLayout>
</layout>